--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@hookform/resolvers": "^3.3.4",
+    "@hookform/resolvers": "^3.6.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/lab": "^5.0.0-alpha.169",
     "@mui/material": "^5.15.12",
     "@mui/material-nextjs": "^5.15.11",
-    "@stripe/stripe-js": "^3.2.0",
+    "@reduxjs/toolkit": "^2.2.5",
+    "@stripe/stripe-js": "^3.5.0",
     "axios": "^1.6.7",
     "next": "14.1.3",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.51.0",
+    "react-redux": "^9.1.2",
     "stripe": "^14.24.0",
     "zod": "^3.22.4"
   },
