--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@mui/material-nextjs": "^5.15.11",
     "@reduxjs/toolkit": "^2.2.5",
     "@stripe/stripe-js": "^3.5.0",
+    "@types/react-datepicker": "^6.2.0",
     "axios": "^1.6.7",
+    "date-fns": "^3.6.0",
     "next": "14.1.3",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.51.0",
