--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-dom": "^18",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.51.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5",
     "stripe": "^14.24.0",
     "zod": "^3.22.4"
   },
