--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-datepicker": "^6.2.0",
     "axios": "^1.6.7",
     "date-fns": "^3.6.0",
+    "json2csv": "^6.0.0-alpha.2",
     "next": "14.1.3",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
@@ -36,6 +37,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/json2csv": "^5.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
